# collection

./: README.md
lib/: libdali  libmseed
lib/lib330/: Makefile  Makefile.am  Makefile.in
lib/libdali-1.7/: Makefile.am  Makefile.in
src/quant2dali/: Makefile  quant2dali.c
