DIST_SUBDIRS = .

lib_LIBRARIES = lib330.a
include_HEADERS = 
lib330_a_SOURCES = libarchive.h libclient.h libcmds.h libcompress.h libcont.h libctrldet.h \
	libcvrt.h libdetect.h libfilters.h liblogs.h libmd5.h libmsgs.h libnetserv.h \
	libopaque.h libpoc.h libsampcfg.h libsampglob.h libsample.h libseed.h \
	libslider.h libstats.h libstrucs.h libsupport.h libtokens.h libtypes.h \
	libverbose.h pascal.h platform.h q330cvrt.h q330io.h q330types.h libdss.h \
	libarchive.c libclient.c libcmds.c libcompress.c libcont.c libctrldet.c \
	libcvrt.c libdetect.c libfilters.c liblogs.c libmd5.c libmsgs.c libnetserv.c \
	libopaque.c libpoc.c libsampcfg.c libsample.c libseed.c libslider.c libstats.c \
	libstrucs.c libsupport.c libtokens.c libtypes.c libverbose.c q330cvrt.c q330io.c libdss.c
